feat(newViewStaffTrainingRecord): Created Mandatory Training table for all records tab

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualification.component.scss
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualification.component.scss
@@ -9,7 +9,8 @@
   }
 
   &__list-item {
-    margin-right: 50px;
+    padding-left: 40px;
+    padding-right: 40px;
     background-color: govuk-colour('white');
 
     &--active {
