--- a/src/app/features/workplace/change-expires-soon-alerts/change-expires-soon-alerts.component.html
+++ b/src/app/features/workplace/change-expires-soon-alerts/change-expires-soon-alerts.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <h1 class="govuk-heading-l govuk-!-margin-bottom-7">Change when you get 'expires soon' alerts</h1>
-    <p class="govuk-inset-text">
+    <p class="govuk">
       Training records have a default 'expires soon' alert that displays 90 days before the training expires. You can
       change the alert to display 60 or 30 days before expiry or leave it set to 90 days.
     </p>
