--- a/src/app/shared/directives/add-edit-training/add-edit-training.component.html
+++ b/src/app/shared/directives/add-edit-training/add-edit-training.component.html
@@ -1,20 +1,11 @@
 <app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"></app-error-summary>
-<ng-container *ngIf="worker">
-  <div class="govuk-grid-row govuk-!-margin-bottom-0">
-    <div class="govuk-grid-column-full">
-      <span class="govuk-caption-xl govuk-!-margin-right-3" data-testid="workerNameAndRole">
-        {{ worker.nameOrId }}
-      </span>
-    </div>
-  </div>
-</ng-container>
 
 <form (ngSubmit)="onSubmit()" [formGroup]="form" #formEl>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
       <fieldset class="govuk-fieldset">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <span class="govuk-caption-l" data-testid="section-heading">{{ section }}</span>
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l govuk-!-margin-bottom-8">
+          <span class="govuk-caption-l" data-testid="section-heading">{{ worker.nameOrId }}</span>
           <h1 class="govuk-fieldset__heading">
             {{ title }}
           </h1>
@@ -23,8 +14,7 @@
           <span class="govuk-!-font-weight-bold">Number of staff selected:</span> {{ workerCount }}
           <a class="govuk-link govuk-!-margin-left-4" [routerLink]="['..', 'select-staff']">Change</a>
         </p>
-        <div *ngIf="missingTrainingRecord; then missingTrainingCategoryLabelBlock; else categoryListBLock"></div>
-        <ng-template #categoryListBLock>
+        <ng-container *ngIf="!trainingCategoryId; else noDropdown">
           <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('category').invalid">
             <label class="govuk-label" for="category"> Training category </label>
             <span *ngIf="submitted && form.get('category').invalid" id="category-error" class="govuk-error-message">
@@ -44,9 +34,12 @@
               </option>
             </select>
           </div>
-        </ng-template>
-        <ng-template #missingTrainingCategoryLabelBlock>
-          <p class="govuk-body govuk-!-margin-bottom-5">Training category: {{ missingTrainingRecord.category }}</p>
+        </ng-container>
+        <ng-template #noDropdown>
+          <p class="govuk-body govuk-!-margin-bottom-8" data-testid="trainingCategoryDisplay">
+            <span class="govuk-util__block"><b>Training category</b></span>
+            <span class="govuk-util__block govuk-!-margin-top-2">{{ trainingRecord?.trainingCategory.category }}</span>
+          </p>
         </ng-template>
 
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.get('title').invalid">
@@ -177,20 +170,25 @@
         </div>
       </fieldset>
     </div>
+    <div class="govuk-grid-column-one-third govuk-!-margin-top-6">
+      <a
+        class="govuk-button govuk-button--link govuk__flex govuk__align-items-center"
+        *ngIf="trainingRecordId"
+        draggable="false"
+        href="#"
+        [routerLink]="['../delete']"
+        data-testid="deleteButton"
+      >
+        <img src="/assets/images/bin.svg" alt="" />
+        <span class="govuk-!-margin-left-1"> Delete this training record </span></a
+      >
+    </div>
   </div>
-
   <div class="govuk-button-group">
     <button type="submit" class="govuk-button govuk-!-margin-right-9">
       {{ buttonText }}
     </button>
-    <button
-      *ngIf="trainingRecordId"
-      type="button"
-      class="govuk-button govuk-button--warning govuk-!-margin-right-8"
-      [routerLink]="['../delete']"
-    >
-      Delete
-    </button>
+
     <a
       class="govuk-button govuk-button--link govuk-!-margin-left-9"
       role="button"
@@ -201,3 +199,4 @@
     </a>
   </div>
 </form>
+<!-- </div> -->
