add the midding mandatory training url to training info panel component

--- a/src/app/shared/components/training-info-panel/training-info-panel.component.html
+++ b/src/app/shared/components/training-info-panel/training-info-panel.component.html
@@ -45,7 +45,11 @@
         <img src="/assets/images/flag-red.svg" alt="" />
       </div>
       <div>
-        <a href="#" class="govuk-link govuk-link--no-visited-state">
+        <a
+          href="#"
+          class="govuk-link govuk-link--no-visited-state"
+          [routerLink]="['/workplace', workplaceUid, 'training-and-qualifications', 'missing-mandatory-training']"
+        >
           {{ totalStaffMissingMandatoryTraining }}
           <ng-container [ngPlural]="totalStaffMissingMandatoryTraining">
             <ng-template ngPluralCase="=1"> staff is missing mandatory training </ng-template>
