--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -237,91 +237,20 @@
 
   <div *ngIf="currentFragment === fragmentsObject.allRecords">
     <div class="govuk-grid-column-full">
-      <div class="govuk-grid-row">
-        <ng-container *ngIf="mandatoryTrainingCount > 0; noMandatoryTraining">
-          <h1 class="govuk-heading-l govuk-!-font-size-27">Mandatory Training</h1>
-          <div *ngFor="let mandatoryTrainingCategory of mandatoryTraining">
-            <table class="govuk-table">
-              <caption class="govuk-table__caption govuk-table__caption--m">
-                {{
-                  mandatoryTrainingCategory.category
-                }}
-              </caption>
-              <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-third">Training Name</th>
-                  <th scope="col" class="govuk-table__header">Accredited</th>
-                  <th scope="col" class="govuk-table__header">Completion date</th>
-                  <th scope="col" class="govuk-table__header">Expriy date</th>
-                  <th scope="col" class="govuk-table__header">Status</th>
-                </tr>
-              </thead>
-              <tbody class="govuk-table__body">
-                <tr
-                  class="govuk-table__row"
-                  *ngFor="let mandatoryTrainingRecord of mandatoryTrainingCategory.trainingRecords"
-                >
-                  <td class="govuk-table__cell">
-                    <a
-                      class="govuk-link--no-visited-state"
-                      [routerLink]="['../training', mandatoryTrainingRecord.uid]"
-                      >{{ mandatoryTrainingRecord.title }}</a
-                    >
-                  </td>
-                  <td class="govuk-table__cell">{{ mandatoryTrainingRecord.accredited }}</td>
-                  <td class="govuk-table__cell">{{ mandatoryTrainingRecord.completed }}</td>
-                  <td class="govuk-table__cell">{{ mandatoryTrainingRecord.expires }}</td>
-                  <td class="govuk-table__cell">{{ mandatoryTrainingRecord.trainingStatus }}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </ng-container>
-        <ng-template #noMandatoryTraining> No mandatory training </ng-template>
-      </div>
-
-      <div class="govuk-grid-row">
-        <ng-container *ngIf="nonMandatoryTrainingCount > 0; noNonMandatoryTraining">
-          <h1 class="govuk-heading-l govuk-!-font-size-27">Non-mandatory training</h1>
-          <div *ngFor="let nonMandatoryTrainingCategory of nonMandatoryTraining">
-            <table class="govuk-table">
-              <caption class="govuk-table__caption govuk-table__caption--m">
-                {{
-                  nonMandatoryTrainingCategory.category
-                }}
-              </caption>
-              <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-third">Training Name</th>
-                  <th scope="col" class="govuk-table__header">Accredited</th>
-                  <th scope="col" class="govuk-table__header">Completion date</th>
-                  <th scope="col" class="govuk-table__header">Expriy date</th>
-                  <th scope="col" class="govuk-table__header">Status</th>
-                </tr>
-              </thead>
-              <tbody class="govuk-table__body">
-                <tr
-                  class="govuk-table__row"
-                  *ngFor="let nonMandatoryTrainingRecord of nonMandatoryTrainingCategory.trainingRecords"
-                >
-                  <td class="govuk-table__cell">
-                    <a
-                      class="govuk-link--no-visited-state"
-                      [routerLink]="['../training', nonMandatoryTrainingRecord.uid]"
-                      >{{ nonMandatoryTrainingRecord.title }}</a
-                    >
-                  </td>
-                  <td class="govuk-table__cell">{{ nonMandatoryTrainingRecord.accredited }}</td>
-                  <td class="govuk-table__cell">{{ nonMandatoryTrainingRecord.completed }}</td>
-                  <td class="govuk-table__cell">{{ nonMandatoryTrainingRecord.expires }}</td>
-                  <td class="govuk-table__cell">{{ nonMandatoryTrainingRecord.trainingStatus }}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </ng-container>
-        <ng-template #noNonMandatoryTraining>No Non-mandatory training</ng-template>
-      </div>
+      <app-new-training
+        [trainingCategories]="mandatoryTraining"
+        [trainingType]="'Mandatory Training'"
+        [canEditWorker]="canEditWorker"
+        [setReturnRoute]="setReturnRoute"
+      >
+      </app-new-training>
+      <app-new-training
+        [trainingCategories]="nonMandatoryTraining"
+        [trainingType]="'Non-mandatory training'"
+        [canEditWorker]="canEditWorker"
+        [setReturnRoute]="setReturnRoute"
+      >
+      </app-new-training>
       <div class="govuk-grid-row">
         <ng-container *ngIf="qualificationsByGroup.count > 0; noQualifications">
           <h1 class="govuk-heading-l govuk-!-font-size-27">Qualification</h1>
@@ -361,17 +290,25 @@
       </div>
     </div>
   </div>
-  <div class="govuk-grid-row govuk-!-margin-top-9" *ngIf="currentFragment === fragmentsObject.mandatoryTraining">
-    <div class="govuk-grid-column-full">
-      <div>Mandatory training</div>
-    </div>
+  <div class="govuk-grid-column-full" *ngIf="currentFragment === fragmentsObject.mandatoryTraining">
+    <app-new-training
+      [trainingCategories]="mandatoryTraining"
+      [trainingType]="'Mandatory Training'"
+      [canEditWorker]="canEditWorker"
+      [setReturnRoute]="setReturnRoute"
+    >
+    </app-new-training>
   </div>
-  <div class="govuk-grid-row govuk-!-margin-top-9" *ngIf="currentFragment === fragmentsObject.nonMandatoryTraining">
-    <div class="govuk-grid-column-full">
-      <div>Non-mandatory training</div>
-    </div>
+  <div class="govuk-grid-column-full" *ngIf="currentFragment === fragmentsObject.nonMandatoryTraining">
+    <app-new-training
+      [trainingCategories]="nonMandatoryTraining"
+      [trainingType]="'Non-mandatory training'"
+      [canEditWorker]="canEditWorker"
+      [setReturnRoute]="setReturnRoute"
+    >
+    </app-new-training>
   </div>
-  <div class="govuk-grid-row govuk-!-margin-top-9" *ngIf="currentFragment === fragmentsObject.qualifications">
+  <div class="govuk-grid-row" *ngIf="currentFragment === fragmentsObject.qualifications">
     <div class="govuk-grid-column-full">
       <div>Qualifications</div>
     </div>
