--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -251,43 +251,8 @@
         [setReturnRoute]="setReturnRoute"
       >
       </app-new-training>
-      <div class="govuk-grid-row">
-        <ng-container *ngIf="qualificationsByGroup.count > 0; noQualifications">
-          <h1 class="govuk-heading-l govuk-!-font-size-27">Qualification</h1>
-          <div *ngFor="let qualificationType of qualificationsByGroup.groups">
-            <table class="govuk-table">
-              <caption class="govuk-table__caption govuk-table__caption--m">
-                {{
-                  qualificationType.group
-                }}
-              </caption>
-              <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-half">Certificate Name</th>
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Year achieved</th>
-                  <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Notes</th>
-                </tr>
-              </thead>
-              <tbody class="govuk-table__body">
-                <tr class="govuk-table__row" *ngFor="let qualificationRecord of qualificationType.records">
-                  <td class="govuk-table__cell">
-                    <a
-                      class="govuk-link--no-visited-state"
-                      [routerLink]="['../qualification', qualificationRecord.uid]"
-                      >{{ qualificationRecord.title }}</a
-                    >
-                  </td>
-                  <td class="govuk-table__cell">{{ qualificationRecord.year }}</td>
-                  <td class="govuk-table__cell">
-                    {{ qualificationRecord.notes ? qualificationRecord.notes : 'None' }}
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </ng-container>
-        <ng-template #noQualifications>No Qualifications</ng-template>
-      </div>
+      <app-new-qualifications [canEditWorker]="canEditWorker" [qualificationsByGroup]="qualificationsByGroup">
+      </app-new-qualifications>
     </div>
   </div>
   <div class="govuk-grid-column-full" *ngIf="currentFragment === fragmentsObject.mandatoryTraining">
@@ -308,9 +273,8 @@
     >
     </app-new-training>
   </div>
-  <div class="govuk-grid-row" *ngIf="currentFragment === fragmentsObject.qualifications">
-    <div class="govuk-grid-column-full">
-      <div>Qualifications</div>
-    </div>
+  <div class="govuk-grid-column-full" *ngIf="currentFragment === fragmentsObject.qualifications">
+    <app-new-qualifications [canEditWorker]="canEditWorker" [qualificationsByGroup]="qualificationsByGroup">
+    </app-new-qualifications>
   </div>
 </ng-container>
